--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
               <img src="assets/img/avatar.jpeg">
             </ion-avatar>
             <ion-label>
-              <ion-text color="medium">
+              <ion-text color="dark">
                 <h1><strong>João Firmino</strong></h1>
               </ion-text>
               <ion-text color="secondary">
@@ -21,13 +21,13 @@
                 <a class="text08" tappable (click)="goToEditProgile()">
                   <ion-text color="medium">
                     <ion-icon name="contact"></ion-icon>
-                    <strong>edit profile</strong>
+                    <strong>editar perfil</strong>
                   </ion-text>
-                </a> <ion-text color="secondary"> | </ion-text> 
+                </a> <ion-text color="medium"> | </ion-text> 
                 <a class="text08" tappable (click)="logout()">
                   <ion-text color="medium">
                     <ion-icon name="log-out"></ion-icon>
-                    <strong>logout</strong>
+                    <strong>sair</strong>
                   </ion-text>
                 </a>
               </ion-menu-toggle>
