--- a/src/app/pages/edit-profile/edit-profile.page.html
+++ b/src/app/pages/edit-profile/edit-profile.page.html
@@ -3,7 +3,7 @@
     <ion-buttons slot="start">
       <ion-back-button></ion-back-button>
     </ion-buttons>
-    <ion-title>Edit Profile</ion-title>
+    <ion-title color="dark">Edit Profile</ion-title>
   </ion-toolbar>
 </ion-header>
 
@@ -12,11 +12,7 @@
     <ion-card-content class="bg-profile">
       <img src="assets/img/avatar.jpeg">
       <h1 class="fw500">João Firmino</h1>
-      <h2 color="light" margin-bottom>Customer</h2>
-      <ion-button icon-left color="secondary">
-        <ion-icon name="photos"></ion-icon> 
-        Edit / Add Avatar
-      </ion-button>
+      <h2 color="light" margin-bottom>Passeador</h2>
     </ion-card-content>
   
     <ion-grid fixed no-padding>
@@ -24,12 +20,12 @@
         <ion-col size="12" padding>
 
           <ion-list margin-bottom>
-            <ion-list-header color="light">
-              <ion-label class="fw700">Form</ion-label>
+            <ion-list-header>
+              <ion-label class="fw700">Seus dados</ion-label>
             </ion-list-header>
 
             <ion-item>
-              <ion-label color="dark" position="stacked">Full Name:</ion-label>
+              <ion-label color="dark" position="stacked">Nome completo:</ion-label>
               <ion-input inputmode="text" placeholder="Ex..: Joe Doe" value="João Firmino"></ion-input>
             </ion-item>
     
@@ -39,12 +35,12 @@
             </ion-item>
     
             <ion-item>
-              <ion-label color="dark" position="stacked">Address:</ion-label>
+              <ion-label color="dark" position="stacked">Endereço:</ion-label>
               <ion-input inputmode="text" placeholder="Ex.: Abey Road 5"></ion-input>
             </ion-item>
     
             <ion-item>
-              <ion-label color="dark">City</ion-label>
+              <ion-label color="dark">Cidade</ion-label>
               <ion-select>
                 <ion-select-option value="nes">New York</ion-select-option>
                 <ion-select-option value="n64">Los Angeles</ion-select-option>
@@ -57,7 +53,7 @@
             </ion-item>
     
             <ion-item>
-              <ion-label color="dark">State</ion-label>
+              <ion-label color="dark">Estado</ion-label>
               <ion-select>
                 <ion-select-option value="nes">NY</ion-select-option>
                 <ion-select-option value="n64">CA</ion-select-option>
@@ -73,37 +69,26 @@
           <ion-list>
             <ion-radio-group>
               <ion-list-header color="light">
-                <ion-label class="fw700">User Type</ion-label>
+                <ion-label class="fw700">Perfil</ion-label>
               </ion-list-header>
           
               <ion-item>
-                <ion-label color="primary">Customer</ion-label>
-                <ion-radio slot="start" value="customer" checked></ion-radio>
+                <ion-label color="primary">Passeador</ion-label>
+                <ion-radio slot="start" value="passeador" checked></ion-radio>
               </ion-item>
           
               <ion-item>
-                <ion-label color="primary">Owner</ion-label>
-                <ion-radio slot="start" value="agent"></ion-radio>
+                <ion-label color="primary">Dono de pet</ion-label>
+                <ion-radio slot="start" value="dono"></ion-radio>
               </ion-item>
             </ion-radio-group>
-
-            <ion-item>
-              <ion-label class="text-1x">Checkbox test</ion-label>
-              <ion-checkbox></ion-checkbox>
-            </ion-item>
           </ion-list>
   
         </ion-col>
       </ion-row>
     </ion-grid>
   
-    <ion-button size="large" expand="full" color="dark" (click)="sendData()" no-margin>Edit</ion-button>
+    <ion-button size="large" expand="full" color="dark" (click)="sendData()" no-margin>Editar</ion-button>
   </ion-card>
-  
-  <div padding>
-    <ion-text color="dark" no-margin>
-      Lorem ipsum dolor sit amet, consectetur adipisicing elit. Illum odio placeat incidunt nesciunt atque ratione quisquam, fugit
-      omnis maxime adipisci excepturi dignissimos aliquam asperiores itaque unde sequi? Minus, quia, dolore?
-    </ion-text>
-  </div>
+
 </ion-content>
