--- a/src/app/pages/edit-profile/edit-profile.page.scss
+++ b/src/app/pages/edit-profile/edit-profile.page.scss
@@ -1,6 +1,6 @@
 :host {
   ion-content {
-    --background: linear-gradient(-135deg, var(--ion-color-medium), var(--ion-color-light))
+    --background: var(--ion-color-light)
   }
 }
 
@@ -8,10 +8,10 @@
   ion-card {
     width: 100%;
     border-radius: 0;
-    background-color: #fff;
+    background-color: var(--ion-color-light);
     ion-card-content {
       padding: 32px;
-      background-color: var(--ion-color-primary);
+      background-color: var(--ion-color-dark);
       color: #fff;
       text-align: center;
 
@@ -19,9 +19,7 @@
         height: 128px;
         width: 128px;
         border-radius: 50%;
-        border: solid 4px #fff;
         display: inline;
-        box-shadow: 0 0 28px rgba(255,255,255, .65);
       }
 
       h1 {
