--- a/src/app/pages/login/login.page.html
+++ b/src/app/pages/login/login.page.html
@@ -7,7 +7,7 @@
       <div class="logo"></div>
       <h4 no-margin>
         <ion-text color="light" class="fw700">
-          Ionic 4 Start Theme
+          The walking dog
         </ion-text>
       </h4>
     </div>
@@ -15,7 +15,7 @@
     <!-- Login form -->
     <form [formGroup]="onLoginForm" class="list-form">
       <ion-item no-padding class="animated fadeInUp">
-        <ion-label position="floating">
+        <ion-label position="floating" color="light">
           <ion-icon name="mail" item-start></ion-icon>
           Email
         </ion-label>
@@ -23,57 +23,52 @@
       </ion-item>
       <p ion-text class="text08" *ngIf="onLoginForm.get('email').touched && onLoginForm.get('email').hasError('required')">
         <ion-text color="warning">
-          Required Field
+          Obrigatório
         </ion-text>
       </p>
 
       <ion-item no-padding class="animated fadeInUp">
-        <ion-label position="floating">
+        <ion-label position="floating" color="light">
           <ion-icon name="lock" item-start></ion-icon>
-          Password
+          Senha
         </ion-label>
         <ion-input color="secondary" type="password" formControlName="password"></ion-input>
       </ion-item>
       <p ion-text color="warning" class="text08" *ngIf="onLoginForm.get('password').touched && onLoginForm.get('password').hasError('required')">
         <ion-text color="warning">
-          Required Field
+          Obrigatório
         </ion-text>
         </p>
     </form>
 
     <p text-right tappable (click)="forgotPass()" class="paz">
       <ion-text color="light">
-        <strong>Forgot Pass?</strong>
+        <strong>Esqueceu sua senha?</strong>
       </ion-text>
     </p>
 
     <div>
-      <ion-button icon-left size="medium" expand="full" shape="round" color="dark" (click)="goToHome()" [disabled]="!onLoginForm.valid" tappable>
+      <ion-button icon-left size="medium" expand="full" shape="round" color="secondary" (click)="goToHome()" [disabled]="!onLoginForm.valid" tappable>
         <ion-icon name="log-in"></ion-icon>
-        Signin
+        Entrar
       </ion-button>
 
       <p text-center>
         <ion-text color="light">
-          Or Signin with:
+          ou entre com:
         </ion-text>
       </p>
 
       <ion-grid class="btn-group">
         <ion-row>
-          <ion-col size="4">
+          <ion-col size="6">
             <ion-button shape="round" expand="full" color="secondary">
               <ion-icon slot="icon-only" name="logo-facebook"></ion-icon>
             </ion-button>
           </ion-col>
-          <ion-col size="4">
+          <ion-col size="6">
             <ion-button shape="round" expand="full" color="secondary">
               <ion-icon slot="icon-only" name="logo-twitter"></ion-icon>
-            </ion-button>
-          </ion-col>
-          <ion-col size="4">
-            <ion-button shape="round" expand="full" color="secondary">
-              <ion-icon slot="icon-only" name="logo-googleplus"></ion-icon>
             </ion-button>
           </ion-col>
         </ion-row>
@@ -85,7 +80,7 @@
     <div text-center margin-top>
       <span (click)="goToRegister()" class="paz" tappable>
         <ion-text color="light">
-          New here? <strong>Sign Up</strong>
+          Novo aqui? <strong>Cadastre-se</strong>
         </ion-text>
       </span>
     </div>
