--- a/src/app/pages/register/register.page.html
+++ b/src/app/pages/register/register.page.html
@@ -6,7 +6,7 @@
       <div class="logo"></div>
       <h3 no-margin>
         <ion-text color="light" class="fw700">
-          <ion-text color="secondary">Register</ion-text>
+          <ion-text color="secondary">Hora de criar sua conta!</ion-text>
         </ion-text>
       </h3>
     </div>
@@ -15,14 +15,14 @@
     <form [formGroup]="onRegisterForm" class="list-form">
       <ion-item no-padding class="animated fadeInUp">
         <ion-label position="floating">
-          <ion-icon name="mail" item-start></ion-icon>
-          Full Name
+          <ion-icon name="person" item-start></ion-icon>
+          Nome completo
         </ion-label>
         <ion-input color="secondary" type="text" formControlName="fullName"></ion-input>
       </ion-item>
       <p ion-text class="text08" *ngIf="onRegisterForm.get('fullName').touched && onRegisterForm.get('fullName').hasError('required')">
         <ion-text color="warning">
-          This field is required
+          Obrigatório
         </ion-text>
       </p>
 
@@ -35,20 +35,36 @@
       </ion-item>
       <p ion-text class="text08" *ngIf="onRegisterForm.get('email').touched && onRegisterForm.get('email').hasError('required')">
         <ion-text color="warning">
-          This field is required
+            Obrigatório
+        </ion-text>
+      </p>
+
+      <ion-item class="animated fadeInUp">
+        <ion-label>
+            <ion-icon name="contacts" item-start></ion-icon>
+            Seu perfil
+        </ion-label>
+        <ion-select placeholder="Selecione um">
+          <ion-select-option value="dono">Dono do pet</ion-select-option>
+          <ion-select-option value="passeador">Passeador</ion-select-option>
+        </ion-select>
+      </ion-item>
+      <p ion-text class="text08" *ngIf="onRegisterForm.get('profile').touched && onRegisterForm.get('profile').hasError('required')">
+        <ion-text color="warning">
+            Obrigatório
         </ion-text>
       </p>
 
       <ion-item no-padding class="animated fadeInUp">
         <ion-label position="floating">
           <ion-icon name="lock" item-start></ion-icon>
-          Password
+          Senha
         </ion-label>
         <ion-input color="secondary" type="password" formControlName="password"></ion-input>
       </ion-item>
       <p ion-text color="warning" class="text08" *ngIf="onRegisterForm.get('password').touched && onRegisterForm.get('password').hasError('required')">
         <ion-text color="warning">
-          This field is required
+          Obrigatório
         </ion-text>
       </p>
     </form>
@@ -56,31 +72,25 @@
     <div margin-top>
       <ion-button icon-left size="medium" expand="full" shape="round" color="dark" (click)="signUp()" [disabled]="!onRegisterForm.valid"
         tappable>
-        <ion-icon name="log-in"></ion-icon>
-        Sign Up
+        Criar conta
       </ion-button>
 
       <p text-center>
         <ion-text color="light">
-          Or Sign Up with:
+          ou entre com:
         </ion-text>
       </p>
 
       <ion-grid class="btn-group">
         <ion-row>
-          <ion-col size="4">
-            <ion-button shape="round" expand="full" fill="outline" color="tertiary">
+          <ion-col size="6">
+            <ion-button shape="round" expand="full" fill="outline" color="secondary">
               <ion-icon slot="icon-only" name="logo-facebook"></ion-icon>
             </ion-button>
           </ion-col>
-          <ion-col size="4">
-            <ion-button shape="round" expand="full" fill="outline" color="tertiary">
+          <ion-col size="6">
+            <ion-button shape="round" expand="full" fill="outline" color="secondary">
               <ion-icon slot="icon-only" name="logo-twitter"></ion-icon>
-            </ion-button>
-          </ion-col>
-          <ion-col size="4">
-            <ion-button shape="round" expand="full" fill="outline" color="tertiary">
-              <ion-icon slot="icon-only" name="logo-googleplus"></ion-icon>
             </ion-button>
           </ion-col>
         </ion-row>
