--- a/src/theme/variables.scss
+++ b/src/theme/variables.scss
@@ -4,20 +4,20 @@
 /** Ionic CSS Variables **/
 :root {
   /** primary **/
-  --ion-color-primary: #2f32a0;
+  --ion-color-primary: #FFA055;
   --ion-color-primary-rgb: 47, 50, 160;
   --ion-color-primary-contrast: #ffffff;
   --ion-color-primary-contrast-rgb: 255, 255, 255;
-  --ion-color-primary-shade: #272983;
-  --ion-color-primary-tint: #5457B1;
+  --ion-color-primary-shade: #FFA055;
+  --ion-color-primary-tint: #FFA055;
 
   /** secondary **/
-  --ion-color-secondary: #5b5fde;
-  --ion-color-secondary-rgb: 91, 95, 222;
+  --ion-color-secondary: #FF9903;
+  --ion-color-secondary-rgb: 255, 153, 3;
   --ion-color-secondary-contrast: #ffffff;
   --ion-color-secondary-contrast-rgb: 255, 255, 255;
-  --ion-color-secondary-shade: #4B4EB6;
-  --ion-color-secondary-tint: #787CE4;
+  --ion-color-secondary-shade: #FF9903;
+  --ion-color-secondary-tint: #FF9903;
 
 /** tertiary **/
 --ion-color-tertiary: #f4a942;
@@ -28,12 +28,12 @@
 --ion-color-tertiary-tint: #f5b255;
 
 /** success **/
---ion-color-success: #10dc60;
+--ion-color-success: #006E5F;
 --ion-color-success-rgb: 16,220,96;
 --ion-color-success-contrast: #fff;
 --ion-color-success-contrast-rgb: 255,255,255;
---ion-color-success-shade: #0ec254;
---ion-color-success-tint: #28e070;
+--ion-color-success-shade: #006E5F;
+--ion-color-success-tint: #006E5F;
 
 /** warning **/
 --ion-color-warning: #ffce00;
@@ -44,12 +44,12 @@
 --ion-color-warning-tint: #ffd31a;
 
 /** danger **/
---ion-color-danger: #f53d3d;
+--ion-color-danger: #C35353;
 --ion-color-danger-rgb: 245,61,61;
 --ion-color-danger-contrast: #fff;
 --ion-color-danger-contrast-rgb: 255,255,255;
---ion-color-danger-shade: #d83636;
---ion-color-danger-tint: #f65050;
+--ion-color-danger-shade: #C35353;
+--ion-color-danger-tint: #C35353;
 
 /** light **/
 --ion-color-light: #f4f4f4;
@@ -68,10 +68,10 @@
 --ion-color-medium-tint: #a2a4ab;
 
 /** dark **/
---ion-color-dark: #110A3B;
+--ion-color-dark: #343434;
 --ion-color-dark-rgb: 34,34,34;
 --ion-color-dark-contrast: #fff;
 --ion-color-dark-contrast-rgb: 255,255,255;
---ion-color-dark-shade: #190e60;
---ion-color-dark-tint: #2e256d;
+--ion-color-dark-shade: #343434;
+--ion-color-dark-tint: #343434;
 }
