--- a/src/app/components/notifications/notifications.component.scss
+++ b/src/app/components/notifications/notifications.component.scss
@@ -1,5 +1,10 @@
+ion-list {
+    text-align: center;
+  }
 .ion-list {
     &.list-ios {
         margin-bottom: 0;
     }
+    text-align: center;
 }
+
