--- a/src/app/components/popmenu/popmenu.component.html
+++ b/src/app/components/popmenu/popmenu.component.html
@@ -9,16 +9,12 @@
   <div class="popup-menu-overlay" [ngClass]="{'in': openMenu}"></div>
   <div class="popup-menu-panel" [ngClass]="{'in': openMenu}">
     <div class="popup-menu-item">
-      <ion-icon name="cog" slot="middle" size="large"></ion-icon>
-      <span>Config</span>
+      <ion-icon name="add" slot="middle" size="large"></ion-icon>
+      <span>Novo Dog</span>
     </div>
     <div class="popup-menu-item">
-      <ion-icon name="beer" slot="middle" size="large"></ion-icon>
-      <span>Activities</span>
-    </div>
-    <div class="popup-menu-item">
-      <ion-icon name="person" slot="middle" size="large"></ion-icon>
-      <span>Settings</span>
+      <ion-icon name="heart" slot="middle" size="large"></ion-icon>
+      <span>Meus Dogs</span>
     </div>
   </div>
 </div>
