--- a/src/global.scss
+++ b/src/global.scss
@@ -114,7 +114,7 @@ ion-item {
   // Custom toolbar (overriding Shadow DOM)
   ion-toolbar {
     &.ion-color-primary {
-      --ion-color-base: var(--ion-color-light) !important;
+      --ion-color-base: var(--ion-color-dark) !important;
     }
   }
   
